# crypto-forecast

./: .env.example  Cargo.toml  LICENSE  README.md
.github/workflows/: crypto_forecast_schedule.yml
src/: ai_client.rs  data_fetcher.rs  main.rs  output.rs  prompt_generator.rs  technical_analysis.rs
